Fixed text overflow for code block in note markdown html.

--- a/web/model-manager.css
+++ b/web/model-manager.css
@@ -244,6 +244,10 @@
     user-select: none;
 }
 
+.model-manager code {
+    text-wrap: wrap;
+}
+
 /* main content */
 .model-manager .model-manager-panel {
     color: var(--fg-color);
